--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -536,7 +536,7 @@
 
     <string name="chongzhi">您好，请选择您要充值的金额</string>
 
-    <string name="zhanghu_chongzhi">您好，请使用支付宝或微信扫码完成充值</string>
+    <string name="zhanghu_chongzhi">您好，请使用支付宝扫码完成充值</string>
 
     <string name="chongzhi_define">您好，请输入充值金额</string>
 
